--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,10 @@
-body {
+*, html, body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+  box-sizing: border-box;
+  list-style: none;
+  font-family: 'Lato', sans-serif;
+  color: #0d0f1c;
+  outline: none;
+  border: none;
+  }
